[package]
name = "msp430fr2355_rslk"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
msp430 = "0.4.0"
msp430-rt = "0.4.0"
#panic-msp430 = "0.4.0"
embedded-hal = { version = "0.2.7", features = ["unproven"] }
msp430fr2x5x-hal = { path = "../msp430fr2x5x-hal" }
st7735-lcd = {version="0.8.1", features = ["graphics"]}
embedded-graphics = "0.7.1"
panic-never = "0.1.0"
nb = "0.1.3"

[dependencies.portable-atomic]
version = "1"


[dependencies.msp430fr2355]
#features = ["rt"]
features = ["rt", "critical-section"] # critical-section gives build errors
path = "../msp430fr2355"

[dev-dependencies]
#panic-msp430 = "0.4.0"
#panic-never = "0.1.0"
msp430-rt = "0.4.0"
critical-section = "1.0.0"
msp430 = { version = "0.4.0", features = ["critical-section-single-core"] }

[profile.release]
lto = "fat"
codegen-units = 256
opt-level = 3
debug = false
overflow-checks = false
debug-assertions = false

[profile.dev]
opt-level = "z"
codegen-units = 1
debug = true
overflow-checks = false
debug-assertions = true

[profile.dev.package."*"]
opt-level = "z"